fix project's details & add user's statistics
