# go-backend/internal/api/router/ProjectRouters.go
@@ -8,7 +8,6 @@ import (
 
 func (router *Router) ProjectRoutes(group *gin.RouterGroup) {
 	group.POST("/project_create", middleware.CookieMiddleware(), controller.ProjectCreate)
-	group.PUT("/projects/:project_id/view", controller.ChangeProjectView)
 	group.GET("/projects/:project_id", controller.GetProjectDetails)
 	group.GET("/user/projects", middleware.CookieMiddleware(), controller.GetProjects)
 	group.GET("/projects/:project_id/users", middleware.CookieMiddleware(), controller.GetProjectUsers)
