# go-backend/internal/api/router/UserStatisticRouters.go
@@ -1,0 +1,11 @@
+package router
+
+import (
+	"app/internal/api/controller"
+	"app/internal/api/middleware"
+	"github.com/gin-gonic/gin"
+)
+
+func (router *Router) UserStatisticRoutes(group *gin.RouterGroup) {
+	group.GET("/users/stats", middleware.CookieMiddleware(), controller.GetUserStats)
+}
